Plugin Jar validation